# UK-site

./: .gitignore  README.md
backend/: crud.py  items_views.py  main.py  pyproject.toml  requirements.txt  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 2023_09_27_2006-c2e12d206978_initial.py  2023_09_27_2010-72f405738a62_initial.py  2023_09_27_2019-0dabbe725b36_add_user.py  2023_09_30_1554-1081a2fa80e3_change.py  2023_10_30_1950-20deb70e353b_fastapi_users.py  2023_10_30_2034-6a8b48a4e6e3_fix_users.py
backend/api_v1/: __init__.py
backend/api_v1/apartments/: crud.py  dependencies.py  schemas.py  views.py
backend/api_v1/buildings/: crud.py  dependencies.py  schemas.py  views.py
backend/api_v1/houses/: crud.py  dependencies.py  schemas.py  views.py
backend/api_v1/news/: crud.py  dependencies.py  schemas.py  views.py
backend/api_v1/products/: crud.py  schemas.py  views.py
backend/core/: config.py
backend/core/models/: __init__.py  apartment.py  base.py  building.py  db_helper.py  house.py  mixin.py  new.py  product.py  profile.py  user.py  users.py
backend/users/: auth.py  crud.py  database.py  manager.py  schemas.py  views.py
fronted/: package-lock.json  package.json
fronted/public/: index.html
fronted/src/: App.js  App.tsx  index.css  index.tsx  models.ts
fronted/src/API/: PostServise.js
fronted/src/components/: ClassCounter.jsx  Counter.jsx  PostFilter.jsx  PostForm.jsx  PostItem.jsx  PostsList.jsx
fronted/src/data/: Buildingsdata.ts  Newsdata.ts
fronted/src/pages/: About.tsx  AboutPage.tsx  BuildingsPage.tsx  MainPage.tsx  (+3 more)
(+20 files in other folders)
