[tool.poetry]
name = "uk-site"
version = "0.1.0"
description = ""
authors = ["Александр Мочалин <mochalin.av7@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = {extras = ["email"], version = "^2.3.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.21"}
aiosqlite = "^0.19.0"
pydantic-settings = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"

[tool.black]
line-length = 79
exclude = '''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
